--- a/index.html
+++ b/index.html
@@ -14,46 +14,47 @@
     </header>
 
     <main>
-        Obtenha a solução certa <br> para o seu negócio
+        <section class="content1">
+            <h1>Obtenha a solução certa <br> para o seu negócio</h1>
+            <h3>LIDERANÇA</h3>
+            <p>Nossos líderes multiculturais têm profunda experiência em start-ups e empresas, com vasta experiência em dispositivos móveis e dados.</p>
+            <h3>CARREIRAS</h3>
+            <p>Temos muito orgulho de nossa posição de liderança no mercado, graças ao trabalho árduo de nossos incrivelmente talentosos.</p>
+            <h3>PARCERIAS</h3>
+            <p>De pesquisas a eventos e parcerias de plataforma, trabalhamos com líderes de pensamento para fornecer dados mais acionáveis.</p>
+            <p>“Eu não sou um produto de minhas circunstâncias. Eu sou um produto de minhas decisões”</p>
+            <p>Stephen Covey</p>
+        </section>
 
-        LIDERANÇA
+        <h2>Suporte <br> online <br> rápido</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius corporis voluptas sapiente! Nam in quis laboriosam, voluptate accusamus repellendus vel, itaque sapiente distinctio quaerat dolores. Laborum non dolorum ab exercitationem!</p>
 
-        Nossos líderes multiculturais têm profunda experiência em start-ups e empresas, com vasta experiência em dispositivos móveis e dados.
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia cupiditate aspernatur qui modi incidunt voluptas iure ex repellendus, natus mollitia non velit dolorum asperiores recusandae voluptatibus possimus, praesentium temporibus?
+            Atque accusantium voluptas neque nostrum eos error repellendus! Distinctio optio magni accusantium consequatur deserunt perspiciatis maiores, nostrum a non quis dolorem ea. Itaque tempore cumque accusantium reprehenderit inventore? Ab, quisquam!
+        </p>
 
-        CARREIRAS
+        <h2>Otimize as <br> operações <br> de serviço</h2>
 
-        Temos muito orgulho de nossa posição de liderança no mercado, graças ao trabalho árduo de nossos incrivelmente talentosos.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perferendis voluptas, quo quae dolor aut, deserunt illum iusto at molestiae eius quis! Sint magni eligendi debitis deserunt doloremque exercitationem ab.</p>
 
-        PARCERIAS
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex excepturi modi possimus. Necessitatibus magnam voluptatum voluptates officiis fugit dolorum dolores eius eos laborum aut soluta, eum in dicta ipsa?
+            Repudiandae, neque earum enim dolorum minima modi recusandae officiis consequatur inventore, veniam praesentium perferendis. Voluptatem porro sint nihil architecto, accusamus fugit provident corrupti aliquam quos similique, eos, culpa itaque deleniti.
+        </p>
 
-        De pesquisas a eventos e parcerias de plataforma, trabalhamos com líderes de pensamento para fornecer dados mais acionáveis.
+        <h2>Suporte <br> online <br> rápido</h2>
 
-        “Eu não sou um produto de minhas circunstâncias. Eu sou um produto de minhas decisões”
-        Stephen Covey
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perferendis voluptas, quo quae dolor aut, deserunt illum iusto at molestiae eius quis! Sint magni eligendi debitis deserunt doloremque exercitationem ab.</p>
 
-        Suporte <br> online <br> rápido
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius corporis voluptas sapiente! Nam in quis laboriosam, voluptate accusamus repellendus vel, itaque sapiente distinctio quaerat dolores. Laborum non dolorum ab exercitationem!
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia cupiditate aspernatur qui modi incidunt voluptas iure ex repellendus, natus mollitia non velit dolorum asperiores recusandae voluptatibus possimus, praesentium temporibus?
-        Atque accusantium voluptas neque nostrum eos error repellendus! Distinctio optio magni accusantium consequatur deserunt perspiciatis maiores, nostrum a non quis dolorem ea. Itaque tempore cumque accusantium reprehenderit inventore? Ab, quisquam!
-
-        Otimize as <br> operações <br> de serviço
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perferendis voluptas, quo quae dolor aut, deserunt illum iusto at molestiae eius quis! Sint magni eligendi debitis deserunt doloremque exercitationem ab.
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex excepturi modi possimus. Necessitatibus magnam voluptatum voluptates officiis fugit dolorum dolores eius eos laborum aut soluta, eum in dicta ipsa?
-        Repudiandae, neque earum enim dolorum minima modi recusandae officiis consequatur inventore, veniam praesentium perferendis. Voluptatem porro sint nihil architecto, accusamus fugit provident corrupti aliquam quos similique, eos, culpa itaque deleniti.
-
-        Suporte <br> online <br> rápido
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perferendis voluptas, quo quae dolor aut, deserunt illum iusto at molestiae eius quis! Sint magni eligendi debitis deserunt doloremque exercitationem ab.
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex excepturi modi possimus. Necessitatibus magnam voluptatum voluptates officiis fugit dolorum dolores eius eos laborum aut soluta, eum in dicta ipsa?
-        Repudiandae, neque earum enim dolorum minima modi recusandae officiis consequatur inventore, veniam praesentium perferendis. Voluptatem porro sint nihil architecto, accusamus fugit provident corrupti aliquam quos similique, eos, culpa itaque deleniti.
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex excepturi modi possimus. Necessitatibus magnam voluptatum voluptates officiis fugit dolorum dolores eius eos laborum aut soluta, eum in dicta ipsa?
+            Repudiandae, neque earum enim dolorum minima modi recusandae officiis consequatur inventore, veniam praesentium perferendis. Voluptatem porro sint nihil architecto, accusamus fugit provident corrupti aliquam quos similique, eos, culpa itaque deleniti.
+        </p>
     </main>
 
     <footer>
-
+        <P>Made by ShhFlow</P>
     </footer>
 </body>
 </html>
