--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
     <main>
         <section class="content1">
             <h1>Obtenha a solução certa <br> para o seu negócio</h1>
-            <h3>LIDERANÇA</h3>
-            <p>Nossos líderes multiculturais têm profunda experiência em start-ups e empresas, com vasta experiência em dispositivos móveis e dados.</p>
-            <h3>CARREIRAS</h3>
-            <p>Temos muito orgulho de nossa posição de liderança no mercado, graças ao trabalho árduo de nossos incrivelmente talentosos.</p>
-            <h3>PARCERIAS</h3>
-            <p>De pesquisas a eventos e parcerias de plataforma, trabalhamos com líderes de pensamento para fornecer dados mais acionáveis.</p>
-            <p>“Eu não sou um produto de minhas circunstâncias. Eu sou um produto de minhas decisões”</p>
-            <p>Stephen Covey</p>
+            <article class="cards">
+                <div class="c1">
+                    <h3>LIDERANÇA</h3>
+                    <p>Nossos líderes multiculturais têm profunda experiência em start-ups e empresas, com vasta experiência em dispositivos móveis e dados.</p>
+                </div>
+
+                <div class="c2">
+                    <h3>CARREIRAS</h3>
+                    <p>Temos muito orgulho de nossa posição de liderança no mercado, graças ao trabalho árduo de nossos incrivelmente talentosos.</p>
+                </div>
+
+                <div class="c3">
+                    <h3>PARCERIAS</h3>
+                    <p>De pesquisas a eventos e parcerias de plataforma, trabalhamos com líderes de pensamento para fornecer dados mais acionáveis.</p>
+                </div>
+            </article>
+            <h4>“Eu não sou um produto de minhas circunstâncias. Eu sou um produto de minhas decisões”</h4>
+            <p class="mtv2">Stephen Covey</p>
         </section>
 
         <h2>Suporte <br> online <br> rápido</h2>
